refactor(oauth2): provider 매퍼 공통 흐름을 추상 베이스로, 디스패치를 레지스트리로 통합
Google / Kakao 매퍼의 4분기 upsert 로직(SocialAccount 조회 → email 매칭 →
신규 생성)과 헬퍼가 거의 동일하게 중복돼 있었고, 두 user 서비스가 각자
Map.of 로 동일한 registrationId → 매퍼 레지스트리를 손으로 구성하고 있었다.

- AbstractOAuth2UserMapper: 4분기 흐름을 템플릿 메서드로 일원화하고,
  하위 클래스는 provider 식별자와 표시명 attribute 추출만 제공한다.
- OAuth2UserMapperRegistry: List<OAuth2UserMapper> 를 수집해 registrationId
  로 디스패치한다. provider 추가는 매퍼 @Component 하나로 끝나 두 서비스를
  건드릴 필요가 없다 (OCP).
- OAuth2Attributes: 내부 식별자 attribute 키와 적재 로직을 중앙화해
  서비스 간 상수 교차 참조를 없앤다.

디스패치 단위 테스트는 레지스트리 대상으로 옮겼다. 동작은 동일하다.